feat: 랜덤 조회 시 종료되지 않은 팝업만 노출되도록 쿼리 및 서비스 로직 개선 - 기존 모든 컨텐츠가 메인페이지에서 랜덤으로 종료된 팝업 포함 노출됨 - 네이티브 쿼리로 end_date 조건을 추가해, 현재 진행 중인 컨텐츠만 DB에서 조회하도록 개선